--- a/03-files.qmd
+++ b/03-files.qmd
@@ -1,21 +1,22 @@
 ---
-title: "Working with files"
-output: 
-  html_document:
-    df_print: paged
-    css: "style.css"
+title: "Files"
+format:
+  html:
+    link-external-newwindow: true
 ---
 
 <head>
-<script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
-</head>
 
+```{=html}
+<script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
+```
+</head>
 
 ```{r global_options, include=FALSE}
 knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
 
-----
+------------------------------------------------------------------------
 
 In this section you will learn how to explore and manipulate files in bash using simple commands, and compound commands using pipes.
 
@@ -23,27 +24,28 @@ In this section you will learn how to explore and manipulate files in bash using
 
 ### Exploring files
 
-----
+------------------------------------------------------------------------
 
 <br>
-<div class="key-points">
+
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
-* Regular files in Linux can be classified as text files, which contain human readable text, and binary files, that contain data that is not human readable
-* The `cat` command can be used to show the contents of a file
-    * The `less` command allows you to page through a large file as if it were a `man` page
-* The `head` and `tail` commands can be used to show the first or last few lines of a file
-    * These can be useful for large text files
-* The `wc -l` command counts the number of lines in a file
-* The `grep` command allows you to filter a text file
-* Text files can be *compressed* using the `gzip` command, which converts them to a binary format that takes up less space
-    * Many of the above commands for working with text files have equivalents for gzipped files
-    * These include `zcat`, `zless`, and `zgrep`
-</div>
+
+-   Regular files in Linux can be classified as text files, which contain human readable text, and binary files, that contain data that is not human readable
+-   The `cat` command can be used to show the contents of a file
+    -   The `less` command allows you to page through a large file as if it were a `man` page
+-   The `head` and `tail` commands can be used to show the first or last few lines of a file
+    -   These can be useful for large text files
+-   The `wc -l` command counts the number of lines in a file
+-   The `grep` command allows you to filter a text file
+-   Text files can be *compressed* using the `gzip` command, which converts them to a binary format that takes up less space
+    -   Many of the above commands for working with text files have equivalents for gzipped files
+    -   These include `zcat`, `zless`, and `zgrep`
+:::
 
 <br>
 
 The following example demonstrates how we can explore text files:
-
 
 ```{bash eval=F}
 [USERNAME]@bifx-core2:~/course$ tree
@@ -99,46 +101,56 @@ This archive contains reference files for the 'Introduction to Bioinformatics on
 
 *Note:* The `-E` flag in `grep` allows you to use a *regular expression* to specify a pattern that `grep` will look for rather than a fixed string. Conceptually, regular expressions are similar to glob patterns, although their syntax is different. Some characters have a special meaning in regular expressions. For example:
 
-+ `^` represents the start of a string
-+ `$` represents the end of a string
-+ `.*` represents a sequence of zero or more characters
-+ `.+` represents a sequence of one or more characters
+-   `^` represents the start of a string
+-   `$` represents the end of a string
+-   `.*` represents a sequence of zero or more characters
+-   `.+` represents a sequence of one or more characters
 
 <br>
-<div class="challenge">
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 How would you check that every line of the 'yeast_genes.bed' file starts with the string 'chr' without looking through the whole file?
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
+
 Run `grep -v -c -E '^chr' bioinformatics_on_the_command_line_files/yeast_genes.bed` to count the number of lines that don't start with 'chr'. We can see that this is zero, so every line must start with 'chr'.
-</div>
+:::
+
 </details>
-</div>
+:::
+
 <br>
 
 ### Shell redirection
 
-----
+------------------------------------------------------------------------
 
 <br>
-<div class="key-points">
+
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
-* The shell can manage where programs receive inputs from and where they send outputs to
-* It provides three I/O channels for programs to use. These are:
-    * **Standard input**, or **STDIN**, which provides input to the program
-    * **Standard output**, or **STDOUT**, which receives output from the program
-    * **Standard error**, or **STDERR**, which receives error messages from the program
-* Program authors don't have to use these I/O channels, but most command line tools designed for Linux, such as the GNU coreutils, do use them
-* By default, **STDIN** comes from the keyboard, and **STDOUT** and **STDERR** go to the terminal, but each of these channels can be redirected
-    * `>` redirects **STDOUT** to an output file, overwriting its contents
-    * `>>` redirects **STDOUT** to an output file, appending to its contents
-    * `2>` redirects **STDERR** to an output file, overwriting its contents
-    * `2>>` redirects **STDERR** to an output file, appending to its contents
-    * `<` reads each line from an input file and feeds it to **STDIN**
-    * `2>&1` redirects **STDERR** to **STDOUT**
-</div>
+
+-   The shell can manage where programs receive inputs from and where they send outputs to
+-   It provides three I/O channels for programs to use. These are:
+    -   **Standard input**, or **STDIN**, which provides input to the program
+    -   **Standard output**, or **STDOUT**, which receives output from the program
+    -   **Standard error**, or **STDERR**, which receives error messages from the program
+-   Program authors don't have to use these I/O channels, but most command line tools designed for Linux, such as the GNU coreutils, do use them
+-   By default, **STDIN** comes from the keyboard, and **STDOUT** and **STDERR** go to the terminal, but each of these channels can be redirected
+    -   `>` redirects **STDOUT** to an output file, overwriting its contents
+    -   `>>` redirects **STDOUT** to an output file, appending to its contents
+    -   `2>` redirects **STDERR** to an output file, overwriting its contents
+    -   `2>>` redirects **STDERR** to an output file, appending to its contents
+    -   `<` reads each line from an input file and feeds it to **STDIN**
+    -   `2>&1` redirects **STDERR** to **STDOUT**
+:::
 
 <br>
 
@@ -184,30 +196,39 @@ rm: remove regular file 'output.txt'? y
 ```
 
 <br>
-<div class="challenge">
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 `cat output.txt` and `cat < output.txt` do the same thing, but `echo output.txt` and `echo < output.txt` don't. Why?
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
-The `cat` command opens the file given as an argument and processes the lines one by one, and it treats lines received from **STDIN** in the same way.  Many programs work this way, but some, like `echo` don't. `echo` simply ignores what comes in from **STDIN**.
-</div>
+
+The `cat` command opens the file given as an argument and processes the lines one by one, and it treats lines received from **STDIN** in the same way. Many programs work this way, but some, like `echo` don't. `echo` simply ignores what comes in from **STDIN**.
+:::
+
 </details>
-</div>
+:::
+
 <br>
 
 ### Creating compound commands using pipes
 
-----
-
+------------------------------------------------------------------------
 
 <br>
-<div class="key-points">
+
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
-* Because the shell provides standard input and output channels, it is possible to chain together simple commands to perform complex tasks
-* This can be done using a 'pipe', represented by the pipe character `|`
-</div>
+
+-   Because the shell provides standard input and output channels, it is possible to chain together simple commands to perform complex tasks
+-   This can be done using a 'pipe', represented by the pipe character `|`
+:::
 
 <br>
 
@@ -245,9 +266,11 @@ Because some programs only operate on files and do not accept input from **STDIN
 ```
 
 <br>
-<div class="challenge">
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge</h2>
-We can find how long it takes to find the first line in '/homes/genomes/mouse/UCSC/mm10/Sequence/WholeGenomeFasta/genome.fa' that countains the character 'A' by writing all matches to a temporary file and then finding the first line using `head` as follows: 
+
+We can find how long it takes to find the first line in '/homes/genomes/mouse/UCSC/mm10/Sequence/WholeGenomeFasta/genome.fa' that countains the character 'A' by writing all matches to a temporary file and then finding the first line using `head` as follows:
 
 ```{bash eval=F}
 [USERNAME]@bifx-core2:~/course$ time grep A /homes/genomes/mouse/UCSC/mm10/Sequence/WholeGenomeFasta/genome.fa > grepA.tmp
@@ -266,12 +289,15 @@ rm: remove regular file 'grepA.tmp'? y
 [USERNAME]@bifx-core2:~/course$ 
 ```
 
-We can see that the operation takes just over 36 seconds. Using the `time` command, find the length of time it takes to perform the same task using a pipe. Is there much of a difference? Why? 
+We can see that the operation takes just over 36 seconds. Using the `time` command, find the length of time it takes to perform the same task using a pipe. Is there much of a difference? Why?
 
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
+
 To find out how long it takes to find the line with a pipe you can do the following:
 
 ```{bash eval=F}
@@ -281,14 +307,14 @@ gcttcagaataatcatattattctcaaattttgtatcaatataaaaaaaA
 real	0m0.011s
 user	0m0.002s
 sys	0m0.012s
-``` 
+```
 
 As we can see the operation completes in about 0.01 seconds, so using a pipe is considerably faster. This is because the pipeline stops when it has found the first match, so the `grep` command doesn't have to go through the whole file.
 
 *Note:* it is actually possible to find the first match quickly using a single grep command and no pipe, by using the `-m` option in grep.
-</div>
+:::
+
 </details>
+:::
 
-</div>
 <br>
-
