--- a/01-start.qmd
+++ b/01-start.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Getting Started"
+format:
+  html:
+    link-external-newwindow: true
 ---
 
 <head>
@@ -16,8 +19,6 @@ knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ------------------------------------------------------------------------
 
 In this section you will learn how to log into the WCB's bifx servers, and run some simple commands. You will also learn how to find out about commands, and how to use bash efficiently.
-
-<br>
 
 ### Starting a Terminal and logging in to the remote server
 
@@ -36,7 +37,7 @@ Once logged in to the VPN, you can log in to the server by typing the following 
 $ ssh [USERNAME]@bifx-core2.bio.ed.ac.uk
 ```
 
-If you are using MobaXTerm, an alternative way of logging in to the server is shown in the [MobaXTerm demo](https://mobaxterm.mobatek.net/demo.html).
+If you are using MobaXTerm, an alternative way of logging into the server is shown in the [MobaXTerm demo](https://mobaxterm.mobatek.net/demo.html).
 
 Once you have typed in your password, you should see some welcome text and a prompt that looks something like this:
 
@@ -46,15 +47,9 @@ Once you have typed in your password, you should see some welcome text and a pro
 
 This prompt shows you that you are logged in to the *bifx-core2* server, and that you are in your home directory (which is referred to using the *\~* character on Linux systems).
 
-*Note:* If you find that your connection to the server keeps dropping out, you can use a tool such as [tmux](https://www.ocf.berkeley.edu/~ckuehl/tmux/) or [screen](https://www.gnu.org/software/screen/) to create a persistent session.
-
-<br>
-
 ### Running basic commands in bash
 
 ------------------------------------------------------------------------
-
-<br>
 
 ::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
@@ -64,13 +59,11 @@ This prompt shows you that you are logged in to the *bifx-core2* server, and tha
     -   installed programs, which could be either the basic GNU core utilities (or *coreutils*), included in most Linux distributions, or other programs, such as specialised bioinformatics tools
 :::
 
-<br>
-
 In order to run a command in bash you type the command and then press the return key to execute it. For example, try typing `date` at the prompt and pressing return. You should get something like this:
 
 ```{bash eval=F}
 [USERNAME]@bifx-core2:~$ date
-Mon 16 Nov 09:21:43 GMT 2020
+Wed 31 Jan 09:21:43 GMT 2024
 [USERNAME]@bifx-core2:~$ 
 ```
 
@@ -90,8 +83,6 @@ In this example, the command includes the following elements:
 -   one option `-d '25 Dec'`, which has a name `-d` (option names always start with at least one '-'), and a value `'25 Dec'`
 -   one argument `+%j`
 
-<br>
-
 #### Options and arguments
 
 Options always have a name, but do not always need to have an associated value. Options that don't have a value are called flags, and are often used as switches for different kinds of functionality. Unlike options, arguments don't have names. Instead they are identified by their position.
@@ -106,9 +97,7 @@ Sat 14 Nov 11:25:11 GMT 2020
 [USERNAME]@bifx-core2:~$ 
 ```
 
-*Note:* The above example uses the `echo` command, which outputs the values of its arguments.
-
-<br>
+*Note:* The above example uses the `echo` command, which outputs the text value of its arguments.
 
 ### Finding out about bash commands
 
@@ -125,8 +114,6 @@ Sat 14 Nov 11:25:11 GMT 2020
 
 While the use of options and arguments makes commands more powerful and flexible, they can be difficult to remember, and can vary between different versions of the command. For this reason, it is useful to be able to find information about commands easily.
 
-<br>
-
 #### The `man` command
 
 This displays a short manual page for a single command. To see the manual page for the *date* command simply type `man date`.
@@ -135,13 +122,9 @@ This displays a short manual page for a single command. To see the manual page f
     -   You can learn more about different commands by typing <kbd>h</kbd>
 -   To learn about bash builtins, type `man builtins`
 
-<br>
-
 #### The `info` command
 
 This displays a more comprehensive hyperlinked manual, which provides detailed information about the GNU coreutils. Simply type `info` to see the info documentation, and type <kbd>H</kbd> in info to find out how to navigate the documentation. Press <kbd>q</kbd> to quit.
-
-<br>
 
 #### `--help` and `-h` flags
 
@@ -160,8 +143,6 @@ Version:   v2.27.0
 ...
 ```
 
-<br>
-
 ::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
 
@@ -169,11 +150,7 @@ We saw the command "date -d '25 Dec' +%j" in the previous section. Can you use t
 
 <details>
 
-<summary>
-
-Solution
-
-</summary>
+<summary>Solution</summary>
 
 ::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
@@ -201,24 +178,16 @@ Run `man date`, and look for the `-d` flag. The documentation explains that `-d`
     -   Using the bash history
 :::
 
-<br>
-
 #### Keyboard shortcuts
 
 By default, bash allows you to use many keyboard shortcuts from the [GNU Emacs](https://www.gnu.org/software/emacs/) editor to work with your commands. These include:
 
 -   <kbd>Ctrl+a</kbd> to move to the beginning of the line
 -   <kbd>Ctrl+e</kbd> to move to the end of the line
--   <kbd>Ctrl/Meta+f</kbd> to move forward one character (<kbd>Ctrl+f</kbd>) or one word (<kbd>Meta+f</kbd>)
-    -   The *Meta* key is generally the <kbd>Alt</kbd> key, or the *option* key on a Mac
-    -   If the *option* key doesn't work as *Meta* on a Mac and you're using the Terminal application, ensure that the *Use Option as Meta key* checkbox is ticked for your selected profile (this can be found under Preferences \> Profiles \> Keyboard)
--   <kbd>Ctrl/Meta+b</kbd> to move back one character (<kbd>Ctrl+b</kbd>) or one word (<kbd>Meta+b</kbd>)
 -   <kbd>Ctrl+k</kbd> to cut the text from the cursor to the end of the line
 -   <kbd>Ctrl+y</kbd> to paste text at the cursor
 
 You can also use <kbd>Ctrl+c</kbd> to terminate the command that is currently running and take you back to the command prompt.
-
-<br>
 
 #### Tab completion
 
@@ -228,19 +197,15 @@ For instance, if you want to run the *bedtools* command on the server, you can t
 
 Typing <kbd>Tab</kbd> once to complete a command name only works if there is only one possible way to complete the name. If there are multiple options and you would like to see them, you can type <kbd>Tab</kbd> twice, and the possible completions will be displayed.
 
-<br>
-
 #### Using the bash history
 
 A particularly useful feature of command line shells is the ability to look back at previous commands that you have run. In bash you can access these commands using the *history* command. Typing *history* will show you a numbered list of commands you've run recently. You can also specify the number of previous commands you'd like to see by including it as an argument.
 
 There are a few useful tricks that make it easy to find and run commands that you have run before:
 
--   Scrolling through the history with the up and down arrows (or <kbd>Ctrl+p</kbd> and <kbd>Ctrl+n</kbd>)
+-   Scrolling through the history with the up and down arrows
 -   Searching the history with <kbd>Ctrl+r</kbd> (reverse-i-search)
 -   Re-running a previously run command with ! followed by the number of the command
-
-<br>
 
 ::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
@@ -249,11 +214,7 @@ What are the possible completions of 'bed' on the server?
 
 <details>
 
-<summary>
-
-Solution
-
-</summary>
+<summary>Solution</summary>
 
 ::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
@@ -288,8 +249,6 @@ bedDown                       bedRemoveOverlap
 </details>
 :::
 
-<br>
-
 ::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
 
@@ -297,11 +256,7 @@ Use the history to re-run the `date -d '25 Dec' +%j` command without re-typing i
 
 <details>
 
-<summary>
-
-Solution
-
-</summary>
+<summary>Solution</summary>
 
 ::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
