--- a/02-filesystem.qmd
+++ b/02-filesystem.qmd
@@ -1,64 +1,55 @@
 ---
-title: "Working with the file system"
-output: 
-  html_document:
-    df_print: paged
-    css: "style.css"
+title: "Filesystem"
+format:
+  html:
+    link-external-newwindow: true
 ---
 
 <head>
-<script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
-</head>
 
+```{=html}
+<script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
+```
+</head>
 
 ```{r global_options, include=FALSE}
 knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
 
-----
+------------------------------------------------------------------------
 
-In this section you will learn how to explore the Linux file system, and how to create, move, delete and edit files and directories. 
-
-<br>
+In this section you will learn how to explore the Linux file system, and how to create, move, delete and edit files and directories.
 
 ### Introducing the Linux file system
 
-----
+------------------------------------------------------------------------
 
-<br>
-<div class="key-points">
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
-* In Linux, like other operating systems, the file system is stuctured as a tree
-    * The top level directory is known as the root directory, and is referred to on the command line as `/`
-* The file system contains regular files, directories, and symbolic links to other files
-    * Each file has a unique path in the file system, along with other attributes such as its size, when it was last modified, and the permissions associated with it
-* Each user's files are generally stored in a directory called the user's *home directory*, also referred to as `~`
-    * Home directories are normally found in `/home`, however on the bifx servers user home directories are also found in `/homes` and `/homes2`
-* bash keeps track of the *current working directory* that the shell is in
-    * When a user logs in to a Linux system, it starts in the user's own home directory by default
-</div>
 
-<br>
+-   In Linux, like other operating systems, the file system is structured as a tree
+    -   The top-level directory is known as the root directory, and is referred to on the command line as `/`
+-   The file system contains regular files, directories, and symbolic links to other files
+    -   Each file has a unique path in the file system, along with other attributes such as its size, when it was last modified, and the permissions associated with it
+-   Each user's files are generally stored in a directory called the user's *home directory*, also referred to as `~`
+    -   Home directories are normally found in `/home`
+-   bash keeps track of the *current working directory* that the shell is in
+    -   When a user logs in to a Linux system, it starts in the user's own home directory by default
+:::
 
 #### The Linux file system
 
-----
+------------------------------------------------------------------------
 
-![](images/filesystem.png){ width=65% }
+![](images/filesystem.png){width="65%"}
 
-<br>
-
-The Linux file system, where all files in a Linux system are stored, is structured as a tree with a single root directory, known as `/`, as shown in the above image. The root directory has a number of subdirectories. The most important for us on the bifx servers are the `/homes` and `/homes2` folders, as these are where users' home directories are stored. Each user's files are generally stored in their home directory, and by default users on the bifx servers are not permitted to create files outside their own home directory. You can find out the path to your home directory by running the command `echo $HOME`.
-
-<br>
+The Linux file system, where all files in a Linux system are stored, is structured as a tree with a single root directory, known as `/`, as shown in the above image. The root directory has a number of sub-directories. The most important for us is `/home` as this is where users' home directories are stored. Each user's files are generally stored in their home directory, and by default users are not permitted to create files outside their own home directory. You can find out the path to your home directory by running the command `echo $HOME`.
 
 #### File paths in Linux
 
-----
+------------------------------------------------------------------------
 
 File paths in Linux can be either *absolute* paths, or *relative* paths.
-
-<br>
 
 ##### Absolute paths
 
@@ -91,20 +82,18 @@ The `pwd` command shows the absolute path of the current working directory:
 
 ```{bash eval=F}
 [USERNAME]@bifx-core2:~$ pwd
-/homes/[USERNAME]
+/home/[USERNAME]
 [USERNAME]@bifx-core2:~$
 ```
-
-<br>
 
 ##### Relative paths
 
 While absolute paths provide an unambiguous way of referring to files, they can be cumbersome. For this reason, Linux makes it possible to define paths relative to the current working directory or the user's home directory:
 
-+ `~` refers to the user's home directory
-+ `.` refers to the current working directory
-+ `..` refers to the parent directory of the current working directory
-    + `../..` refers to the parent directory of the parent directory of the current working directory, `../../..` refers to the parent directory of that directory, and so on 
+-   `~` refers to the user's home directory
+-   `.` refers to the current working directory
+-   `..` refers to the parent directory of the current working directory
+    -   `../..` refers to the parent directory of the parent directory of the current working directory, `../../..` refers to the parent directory of that directory, and so on
 
 If you just use the name of a file, Linux assumes that you are referring to a file in the current working directory.
 
@@ -112,25 +101,23 @@ The `realpath` command can be used to show the absolute path corresponding to a 
 
 ```{bash eval=F}
 [USERNAME]@bifx-core2:~$ realpath ~
-/homes/[USERNAME]
+/home/[USERNAME]
 [USERNAME]@bifx-core2:~$ realpath .
-/homes/[USERNAME]
+/home/[USERNAME]
 [USERNAME]@bifx-core2:~$ realpath ..
-/homes
+/home
 [USERNAME]@bifx-core2:~$ 
 ```
-
-<br>
 
 ##### Glob patterns
 
 Linux also makes it possible to include wildcards in file paths, making it possible to refer to a group of file paths at once. Paths that include wildcards are called glob patterns. Useful wildcards include:
 
-+ `*` which matches any sequence of characters
-+ `?` which matches any single character
-+ `[]` which matches a single character within the square brackets
-    + for example, [aA] would match 'a' or 'A'
-    + ranges of numbers are allowed, so [1-5] matches 1, 2, 3, 4, or 5
+-   `*` which matches any sequence of characters
+-   `?` which matches any single character
+-   `[]` which matches a single character within the square brackets
+    -   for example, \[aA\] would match 'a' or 'A'
+    -   ranges of numbers are allowed, so \[1-5\] matches 1, 2, 3, 4, or 5
 
 When bash sees a glob pattern, it expands it into a list of file paths that match the pattern (separated by spaces). A convenient way to experiment with glob patterns (and to make sure they match the files you want them to) is to use the `echo` command, which prints its arguments to the command line:
 
@@ -144,20 +131,16 @@ When bash sees a glob pattern, it expands it into a list of file paths that matc
 [USERNAME]@bifx-core2:~$
 ```
 
-*Note:* If you write an argument to a command that contains glob wildcard characters, but is not a glob pattern, always remember to put it in quotes to prevent it from being expanded by the shell. It's also worth remembering that glob patterns do not match files that start with a dot. These are *hidden files* and are often used as configuration files that users do not normally need to see.
-
-<br>
-
 #### File types and attributes in Linux
 
-----
+------------------------------------------------------------------------
 
-The Linux file system contains a three main types of file:
-    
-+ **Regular files**, which contain data
-+ **Directories**, which contain other files or directories
-+ **Symbolic links**, which are aliases for files and folders
-    
+The Linux file system contains three main types of file:
+
+-   **Regular files**, which contain data
+-   **Directories**, which contain other files or directories
+-   **Symbolic links**, which are aliases (or pointers) to files and folders
+
 As well as its name and path, each file has a number of attributes associated with it, such as its size, when it was last modified, and the permissions associated with it. You can check the attributes associated with a file using the `stat` command:
 
 ```{bash eval=F}
@@ -175,88 +158,81 @@ Change: 2020-11-12 12:56:31.032140047 +0000
 
 The output of the `stat` command shows us:
 
-+ What type of file this is (a regular file)
-+ The size of the file (4059820)
-+ The identity and group of the owner of the file (root)
-+ When the file was last accessed, modified, and changed
-+ The permissions on the file (-rw-r--r--)
-    + The first character of the permission string tells us whether it is a file or directory
-    + The rest of the string can be divided into three groups (rw-, r--, and r--), representing the permissions granted to the user that owns the file, the group associated with the file, and all users
-    + There are three types of permission. These are permission to read the file (`r`), permission to write to the file (`w`), and permission to execute the file (`x`)
+-   What type of file this is (a regular file)
+-   The size of the file (4059820)
+-   The identity and group of the owner of the file (root)
+-   When the file was last accessed, modified, and changed
+-   The permissions on the file (-rw-r--r--)
+    -   The first character of the permission string tells us whether it is a file or directory
+    -   The rest of the string can be divided into three groups (rw-, r--, and r--), representing the permissions granted to the user that owns the file, the group associated with the file, and all users
+    -   There are three types of permission. These are permission to read the file (`r`), permission to write to the file (`w`), and permission to execute the file (`x`)
 
-*Note:* When you run the `stat` command on a directory it shows the size of the directory itself, not the size of the directory with all of its contents (which is normally what you want). To find the size of a directory and its contents, you can use the `du -sh` command:
-
-```{bash eval=F}
-[USERNAME]@bifx-core2:~$ stat /library/training/bioinformatics_on_the_command_line
-  File: /library/training/bioinformatics_on_the_command_line
-  Size: 4         	Blocks: 41         IO Block: 4096   directory
-Device: 37h/55d	Inode: 13190       Links: 2
-Access: (0755/drwxr-xr-x)  Uid: (    0/    root)   Gid: (    0/    root)
-Access: 2020-11-13 10:21:45.604446040 +0000
-Modify: 2020-11-12 22:13:44.568434982 +0000
-Change: 2020-11-12 22:13:44.568434982 +0000
- Birth: -
-[USERNAME]@bifx-core2:~$ du -sh /library/training/bioinformatics_on_the_command_line 
-4.0M	/library/training/bioinformatics_on_the_command_line
-[USERNAME]@bifx-core2:~$ 
-```
-
-<br>
-<div class="challenge">
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 Create a glob pattern that matches */homes/genomes/mouse/GRCm38* and */homes/genomes/mouse/UCSC* only.
-<details>
-<summary></summary>
-<div class="solution">
-<h2><i class="far fa-eye"></i> Solution:</h2>
-One option would be */homes/genomes/mouse/[GU]\**
-</div>
-</details>
-</div>
-<br>
 
-<div class="challenge">
+<details>
+
+<summary>Solution</summary>
+
+::: solution
+<h2><i class="far fa-eye"></i> Solution:</h2>
+
+One option would be */homes/genomes/mouse/\[GU\]\**
+:::
+
+</details>
+:::
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 Create a glob pattern that matches everything in */homes/genomes/mouse* except for */homes/genomes/mouse/UCSC*.
-<details>
-<summary></summary>
-<div class="solution">
-<h2><i class="far fa-eye"></i> Solution:</h2>
-One option would be */homes/genomes/mouse/\*[0-9]*
-</div>
-</details>
-</div>
-<br>
 
-<div class="challenge">
-<h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
-Who has permission to read the file '/library/training/bioinformatics_on_the_command_line/bioinformatics_on_the_command_line_files.tar.gz'? Who is permitted to write to it? Is anyone permitted to execute it?
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
-Everyone on the server can read the file. The user that owns the file can read and write to it. Nobody is permitted to execute this file.
-</div>
+
+One option would be */homes/genomes/mouse/\*\[0-9\]*
+:::
+
 </details>
-</div>
-<br>
+:::
+
+::: challenge
+<h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
+Who has permission to read the file '/library/training/bioinformatics_on_the_command_line/bioinformatics_on_the_command_line_files.tar.gz'? Who is permitted to write to it? Is anyone permitted to execute it?
+
+<details>
+
+<summary>Solution</summary>
+
+::: solution
+<h2><i class="far fa-eye"></i> Solution:</h2>
+
+Everyone on the server can read the file. The user that owns the file can read and write to it. Nobody is permitted to execute this file.
+:::
+
+</details>
+:::
 
 ### Exploring the file system
 
-----
+------------------------------------------------------------------------
 
-<br>
-<div class="key-points">
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
-+ `cd` changes the current working directory
-+ `pushd` also changes the current working directory, but keeps a history of where you've been
-  + Use `popd` to go back, and `dirs` to look at the history
-* The `ls` command lists the files in the current working directory
-* The `tree` command provides a readable summary of the files in the current directory and its subdirectories
-* The `find` command recursively searches for files in the current file system
-</div>
 
-<br>
+-   `cd` changes the current working directory
+-   The `ls` command lists the files in the current working directory
+-   The `tree` command provides a readable summary of the files in the current directory and its sub-directories
+-   The `find` command recursively searches for files in the current file system
+:::
 
 The following example demonstrates how we can navigate within the file system, and view and find files:
 
@@ -312,48 +288,64 @@ drwxr-xr-x 3 root root    3 Nov 12 12:56  ..
 *Note:* In this example we have used the command `ls -lah`. This is an example of a shorthand that you can use in the bash shell when specifying multiple flags. `ls -lah` is equivalent to `ls -l -a -h`.
 
 <br>
-<div class="challenge">
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 List all of the paths to files named 'genome.fa' in the directory '/homes/genomes/mouse/'
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
+
 Run `find /homes/genomes/mouse/ -type f -name 'genome.fa'`
-</div>
+:::
+
 </details>
-</div>
+:::
+
 <br>
 
 <br>
-<div class="challenge">
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
-Using the commands you've learned in this section, explore the /homes/genomes/ directory on the server.  Which organisms do we have genomes for (no need to include subdirectories)? Which genome releases do we have for each of these organisms? Are there any files in '/homes/genomes/mouse over 6GB in size?
+
+Using the commands you've learned in this section, explore the /homes/genomes/ directory on the server. Which organisms do we have genomes for (no need to include subdirectories)? Which genome releases do we have for each of these organisms? Are there any files in '/homes/genomes/mouse over 6GB in size?
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
-Run `ls /homes/genomes/` to list the organisms in '/homes/genomes'.
-Run `find /homes/genomes/ -maxdepth 2 -type d` to list the subdirectories of the directories representing the organisms, which represent genome releases.
-Run `find /homes/genomes/mouse -type f -size +6G` to list the files over 6GB in size.
-</div>
+
+Run `ls /homes/genomes/` to list the organisms in '/homes/genomes'. Run `find /homes/genomes/ -maxdepth 2 -type d` to list the subdirectories of the directories representing the organisms, which represent genome releases. Run `find /homes/genomes/mouse -type f -size +6G` to list the files over 6GB in size.
+:::
+
 </details>
-</div>
+:::
+
 <br>
 
 ### Creating and deleting files
 
-----
+------------------------------------------------------------------------
 
 <br>
-<div class="key-points">
+
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
-* Files can be created using `touch`, by a text editor, or by redirecting the output of a program
-* Symbolic links can be created using `ln -s`
-* Directories can be created using `mkdir`, and empty directories can be removed using `rmdir`
-* The `rm` command can be used to delete files, links, and directories along with their contents (using the `-r` flag)
-    * There is no recycle bin in Linux, so `rm` should be used with care. The `-i` flag can be used to prompt for confirmation before deleting files
-</div>
+
+-   Files can be created using `touch`, by a text editor, or by redirecting the output of a program
+-   Symbolic links can be created using `ln -s`
+-   Directories can be created using `mkdir`, and empty directories can be removed using `rmdir`
+-   The `rm` command can be used to delete files, links, and directories along with their contents (using the `-r` flag)
+    -   There is no recycle bin in Linux, so `rm` should be used with care. The `-i` flag can be used to prompt for confirmation before deleting files
+:::
 
 <br>
 
@@ -433,47 +425,57 @@ rm: remove regular empty file 'file1'? y
 
 The example demonstrates a number of commands:
 
-+ `touch` to create an empty file
-    - This can also be used to update the timestamp on an existing file
-+ `mkdir` to create empty directories
-    - Add -p to create nested directories by specifying paths
-+ `ln -s` to create a symbolic link to a file or directory
-+ `rmdir` to delete empty directories, without deleting files or non-empty directories
-+ `rm` command
-    -  Add -r to remove directories (and their contents)
-    -  Add -i to ask for confirmation before deleting
+-   `touch` to create an empty file
+    -   This can also be used to update the timestamp on an existing file
+-   `mkdir` to create empty directories
+    -   Add -p to create nested directories by specifying paths
+-   `ln -s` to create a symbolic link to a file or directory
+-   `rmdir` to delete empty directories, without deleting files or non-empty directories
+-   `rm` command
+    -   Add -r to remove directories (and their contents)
+    -   Add -i to ask for confirmation before deleting
 
 <br>
-<div class="challenge">
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 How could you create a symbolic link which has a different name to the file you're linking to?
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
+
 Use `ln -s -T [path to target file] [new name]`
-</div>
+:::
+
 </details>
-</div>
-<br>
-
-### Copying and moving files and directories 
-
-----
+:::
 
 <br>
-<div class="key-points">
+
+### Copying and moving files and directories
+
+------------------------------------------------------------------------
+
+<br>
+
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key Points</h2>
-* Files and directories can be copied using `cp`
-    * To copy a directory along with its contents, use the `-r` flag
-* Archive files in *tar* format can be extracted using the `tar` command
-* Directories can be synchronised using `rsync`, which only copies updated files
-* Files and directories can be moved or renamed using `mv`
-    * Groups of files can be renamed using `prename`
-* Attributes of files and directories can be changed using `chmod` and `touch`
-    + `touch` updates the timestamp of an existing file
-    + `chmod` changes the permissions on a file
-</div>
+
+-   Files and directories can be copied using `cp`
+    -   To copy a directory along with its contents, use the `-r` flag
+-   Archive files in *tar* format can be extracted using the `tar` command
+-   Directories can be synchronised using `rsync`, which only copies updated files
+-   Files and directories can be moved or renamed using `mv`
+    -   Groups of files can be renamed using `prename`
+-   Attributes of files and directories can be changed using `chmod` and `touch`
+    -   `touch` updates the timestamp of an existing file
+    -   `chmod` changes the permissions on a file
+:::
 
 <br>
 
@@ -595,23 +597,29 @@ rm: remove write-protected regular file 'bioinformatics_on_the_command_line_file
 
 This example has demonstrated a number of commands:
 
-+ `cp` to copy files and directories (with the `-r` flag set)
-    + The `-a` flag preserves file attributes when they are copied
-+ `rsync` to synchronise directories
-+ `mv` to move files or directories
-+ `prename` to perform 'search and replace' style renaming of files
-+ `touch` to update the timestamp of an existing file
-+ `chmod` to change the permissions on a file
-    + It's always a good idea to make raw data files read only as we did in the example, as it makes it more difficult to remove or overwrite them accidentally 
+-   `cp` to copy files and directories (with the `-r` flag set)
+    -   The `-a` flag preserves file attributes when they are copied
+-   `rsync` to synchronise directories
+-   `mv` to move files or directories
+-   `prename` to perform 'search and replace' style renaming of files
+-   `touch` to update the timestamp of an existing file
+-   `chmod` to change the permissions on a file
+    -   It's always a good idea to make raw data files read only as we did in the example, as it makes it more difficult to remove or overwrite them accidentally
 
 <br>
-<div class="challenge">
+
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 How would you change the permissions on a file so that nobody can execute it, and only the owner of the file can read it or write to it?
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
+
 You can do this using the following steps:
 
 ```{bash eval=F}
@@ -626,19 +634,27 @@ You can do this using the following steps:
 -rw------- 1 [USERNAME] [USERNAME] 0 Nov 14 12:51 chmod_test
 [USERNAME]@bifx-core2:~/course$ 
 ```
-</div>
+:::
+
 </details>
-</div>
+:::
+
 <br>
 
-<div class="challenge">
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 How could you check which files `rsync` will copy across when synchronising folders without actually copying them?
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
+
 `rsync` has a `--dry-run` flag that allows you to do this.
-</div>
+:::
+
 </details>
-</div>
+:::
