--- a/06-scripts.qmd
+++ b/06-scripts.qmd
@@ -1,41 +1,34 @@
 ---
-title: "Scripting for reproducible data analysis"
-output: 
-  html_document:
-    df_print: paged
-    css: "style.css"
+title: "Scripts"
+format:
+  html:
+    link-external-newwindow: true
 ---
 
 <head>
-<script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
-</head>
 
+```{=html}
+<script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
+```
+</head>
 
 ```{r global_options, include=FALSE}
 knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
 
-----
+------------------------------------------------------------------------
 
-So far in this course we have learned how to work interactively on the command line to analyse data. This section will introduce the idea of *bash shell scripting*.  We will also introduce the concept of reproducible data analysis, and will show how using scripts to analyse data can facilitate this.
-
-<br>
+So far in this course we have learned how to work interactively on the command line to analyse data. This section will introduce the idea of *bash shell scripting*. We will also introduce the concept of reproducible data analysis, and will show how using scripts to analyse data can facilitate this.
 
 ## Shell scripts in bash
 
-----
-
-<br>
-<div class="key-points">
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key points</h2>
-* A **shell script** is a text file containing multiple commands, which can then be run from the command line as a single command
-</div>
 
-<br>
+-   A **shell script** is a text file containing multiple commands, which can then be run from the command line as a single command
+:::
 
 ### Writing and running your own scripts
-
-----
 
 In its most basic form, a shell script is simply a text file containing a list of commands that is run in sequence from top to bottom. This kind of script can be run by providing it as an argument to the `bash` command, as in the following example:
 
@@ -62,9 +55,9 @@ GRCm38	mm10  mm9  UCSC
 
 It is also possible to create a script that can be run as a standalone program rather than as an argument to `bash`. This involves two steps:
 
-1. Add the line `#!/bin/bash` (known as a [shebang](https://en.wikipedia.org/wiki/Shebang_(Unix)) line) as the first line of the file using a text editor
-2. Use the `chmod` command to make the file executable
-    + `chmod a+x my_script.sh` will change the permissions on the script so that any user can run it
+1.  Add the line `#!/bin/bash` (known as a [shebang](https://en.wikipedia.org/wiki/Shebang_(Unix)) line) as the first line of the file using a text editor
+2.  Use the `chmod` command to make the file executable
+    -   `chmod a+x my_script.sh` will change the permissions on the script so that any user can run it
 
 Once these steps have been followed, it will be possible to execute the script using its path:
 
@@ -85,50 +78,36 @@ GRCm38	mm10  mm9  UCSC
 
 *Note:* If you want to be able to run your script just by typing its name, you need to move it to a directory that is included in the *\$PATH* environment variable.
 
-+ To check which folders are listed in *\$PATH*, you can type `echo $PATH`
-+ To add a directory to *\$PATH* permanently, add the line `export PATH=[YOUR DIRECTORY]:$PATH` to the end of the `~/.bashrc` file, then run the command `source ~/.bashrc`
-+ If you run a program from a directory in *\$PATH*, it can be useful to check the full path to that program to make sure you're not inadvertently running another program with the same name. You can do this by using the `which` command.
-
-<br/>
+-   To check which folders are listed in *\$PATH*, you can type `echo $PATH`
+-   To add a directory to *\$PATH* permanently, add the line `export PATH=[YOUR DIRECTORY]:$PATH` to the end of the `~/.bashrc` file, then run the command `source ~/.bashrc`
+-   If you run a program from a directory in *\$PATH*, it can be useful to check the full path to that program to make sure you're not inadvertently running another program with the same name. You can do this by using the `which` command.
 
 ### Editing scripts
 
-----
-
 You can edit your scripts using a text editor such as *emacs* or *vim*.
-  
-+ `emacs` opens emacs
-    + you can then take the tutorial by typing Ctrl+h t
-+ `vim` opens vim
-    + you can take a tutorial by running the `vimtutor` command at the bash prompt
 
-<br>
+-   `emacs` opens emacs
+    -   you can then take the tutorial by typing Ctrl+h t
+-   `vim` opens vim
+    -   you can take a tutorial by running the `vimtutor` command at the bash prompt
 
 ## Reproducible data analysis with scripts
 
-----
-
-<br>
-<div class="key-points">
+::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key points</h2>
-* Data analysis should be reproducible
-    * You should be able to recreate all of the steps in your analysis
-    * Other researchers should also be able to recreate your analysis to verify your results
-* The bash shell makes it easy to analyse data interactively. However, if data is analysed this way it can be difficult to keep track of exactly which steps were taken to produce a given result
-* This problem can be solved by creating a script that contains all of the commands needed to produce the results
-    * You and other researchers can then recreate your analysis by running the script
-* This section presents a bash script that replicates the case study performed in the previous section
-</div>
 
-<br>
+-   Data analysis should be reproducible
+    -   You should be able to recreate all of the steps in your analysis
+    -   Other researchers should also be able to recreate your analysis to verify your results
+-   The bash shell makes it easy to analyse data interactively. However, if data is analysed this way it can be difficult to keep track of exactly which steps were taken to produce a given result
+-   This problem can be solved by creating a script that contains all of the commands needed to produce the results
+    -   You and other researchers can then recreate your analysis by running the script
+-   This section presents a bash script that replicates the case study performed in the previous section
+:::
 
-In the previous section we showed how to perform a simple analysis of some RNA-Seq data from scratch. In order turn this into a reproducible analysis workflow, it is necessary to put all of the commands that make up the analysis into a script. 
-
-<br>
+In the previous section we showed how to perform a simple analysis of some RNA-Seq data from scratch. In order turn this into a reproducible analysis workflow, it is necessary to put all of the commands that make up the analysis into a script.
 
 ### Creating a simple data analysis script
-
-----
 
 The simplest way to create a script is to put all of the commands that made up the analysis into a file in the order in which they were run, creating a file that looks like this:
 
@@ -322,22 +301,18 @@ XII	485710	485842	YLR159C-A	.	-	3052
 [USERNAME]@bifx-core2:~/course$ 
 ```
 
-<br>
-
 ### Creating an improved data analysis script
-
-----
 
 In this section we improve our script by doing the following:
 
-+ Adding a shebang line to the script so that it can be run as a standalone program
-+ Ensuring that the script does not keep running if one of the commands within it fails
-    + This is what the `set -euo pipefail` command at the top of the script does
-+ Deleting unnecessary commands
-+ Adding spacing and comments to make the script easier to read
-    + In bash, lines starting with `#` are taken to be comments
-+ Specifying inputs as variables in order to make the script more general and easier to maintain, and using paths relative to '~' rather than the current working directory so that the script can be run in any directory and will still find the files
-+ Adding a few lines to the script to create a run report, which specifies the software versions used for the analysis
+-   Adding a shebang line to the script so that it can be run as a standalone program
+-   Ensuring that the script does not keep running if one of the commands within it fails
+    -   This is what the `set -euo pipefail` command at the top of the script does
+-   Deleting unnecessary commands
+-   Adding spacing and comments to make the script easier to read
+    -   In bash, lines starting with `#` are taken to be comments
+-   Specifying inputs as variables in order to make the script more general and easier to maintain, and using paths relative to '\~' rather than the current working directory so that the script can be run in any directory and will still find the files
+-   Adding a few lines to the script to create a run report, which specifies the software versions used for the analysis
 
 The updated script is shown here:
 
@@ -485,63 +460,49 @@ GNU Awk 4.1.4, API: 1.1 (GNU MPFR 4.0.1, GNU MP 6.1.2)
 [USERNAME]@bifx-core2:~/course$ 
 ```
 
-<br>
-<div class="challenge">
+::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
+
 What is the line `ls "$RAW_FASTQ" "$GENOME_FASTA" "$GENES_BED" > /dev/null` in the script for?
+
 <details>
-<summary></summary>
-<div class="solution">
+
+<summary>Solution</summary>
+
+::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
+
 If the files referenced by *RAW_FASTQ*, *GENOME_FASTA*, and *GENES_BED* exist, the line does nothing, as the output of the command is redirected to `/dev/null` (which basically means that it is ignored). However, if any of the files don't exist this command will fail with an error message. Because we have included the line `set -eou pipefail` this will cause the script to stop running, which is what we want if one or more of the output files is missing.
-</div>
+:::
+
 </details>
-</div>
-<br>
+:::
 
 ### Managing your scripts
 
-----
-
 Once you start writing scripts, it is a good idea to use a *version control system* to keep track of the changes you make to your scripts. A good choice for this would be `git`. The following five commands will allow you to use `git` for version control:
 
-+ `git init` to initialise a git repository in the current working directory
-+ `git add -A; git commit -m "Latest updates"` to commit any changes to files in the current working directory to the repository
-+ `git status` to see if any changes have been made since the last commit
-+ `git diff` to see the differences between the files in the current working directory and the last commit
-+ `git show HEAD:[NAME OF FILE IN GIT]` to view the most recent version of a file in the git repository
-    + You can save the output of `git show` to a file by redirecting its output using `>`
+-   `git init` to initialise a git repository in the current working directory
+-   `git add -A; git commit -m "Latest updates"` to commit any changes to files in the current working directory to the repository
+-   `git status` to see if any changes have been made since the last commit
+-   `git diff` to see the differences between the files in the current working directory and the last commit
+-   `git show HEAD:[NAME OF FILE IN GIT]` to view the most recent version of a file in the git repository
+    -   You can save the output of `git show` to a file by redirecting its output using `>`
 
-To learn more about `git`, you can look at this [software carpentry course](https://swcarpentry.github.io/git-novice/), which covers it in a lot more detail. 
+To learn more about `git`, you can look at this [software carpentry course](https://swcarpentry.github.io/git-novice/), which covers it in a lot more detail.
 
-*Note:* `git` should only be used for small text files such as scripts. It is not designed to work with large data files. 
+*Note:* `git` should only be used for small text files such as scripts. It is not designed to work with large data files.
 
-<br>
-
-### Closing thoughts: practical workflows on the command line
-
-----
+## Closing thoughts: practical workflows on the command line
 
 In this section we created a data analysis script in bash that satisfies two major requirements for reproducible data analysis:
 
-+ The script provides a complete and accurate record of the steps that were taken to produce the output files, along with a record of the versions of the software tools used to manipulate the data
-+ The script is also in a form that would be easy to share with other researchers, allowing them to replicate your analysis easily
+-   The script provides a complete and accurate record of the steps that were taken to produce the output files, along with a record of the versions of the software tools used to manipulate the data
+-   The script is also in a form that would be easy to share with other researchers, allowing them to replicate your analysis easily
 
 The main drawback of using bash scripts to represent workflows is that they are often impractical. The example presented here uses an extremely small input FASTQ file, and an organism with a relatively small genome. As a result it can be run from scratch in under a minute. Running the same pipeline with a realistically sized input FASTQ file and a larger genome could take hours to run, so it is no longer practical to re-run the pipeline every time you make a change. A workaround for this would be to comment out parts of the script that you do not want to re-run, however this is considered bad practice as it introduces the possibility of human error in selecting the parts of the pipeline that need to be re-run when the pipeline is updated.
 
 If you are writing analysis pipelines, you should look into using a modern workflow system such as [Snakemake](https://snakemake.readthedocs.io/en/stable/) or [Nextflow](https://www.nextflow.io/). Workflows written for these workflow systems can be run repeatedly, and the workflow system will automatically work out which steps of the analysis workflow need to be re-run based on the timestamps of the files. They also provide a number of other useful features:
 
-+ They work out which steps of the analysis workflow can be run in parallel, and assign steps to different cores when possible, which can speed up the analysis considerably
-+ They simplify the process of running workflows on a computing cluster
-
-
-
-
-
-
-
-
-
-
-
-
+-   They work out which steps of the analysis workflow can be run in parallel, and assign steps to different cores when possible, which can speed up the analysis considerably
+-   They simplify the process of running workflows on a computing cluster
